Test/git-issues/git-issue-970a.dfy.expect
git-issue-970a.dfy(30,2): Error: A method containing a :- statement must have an out-parameter (Test1)
git-issue-970a.dfy(44,2): Error: A method containing a :- statement must have an out-parameter (Test4)
2 resolution/type errors detected in git-issue-970a.dfy
